Fixed issue with hover text on mobile screens

--- a/beer-app/src/App.css
+++ b/beer-app/src/App.css
@@ -306,8 +306,8 @@ form {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  height: 55vh;
-  min-width: 50vw;
+  height: 45vh;
+  min-width: 45vw;
   margin: 0vh 1vw;
   padding: 1vh 1vw;
   border-radius: 15px;
@@ -512,6 +512,10 @@ footer {
   .indResult p {
     font-size: 0.7em;
   }
+
+  .output:hover .beerInfo {
+    visibility: hidden;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -569,6 +573,10 @@ footer {
     width: 80vw;
     margin: 0 10vw;
   }
+
+  .output:hover .beerInfo {
+    visibility: hidden;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -625,5 +633,9 @@ footer {
   .beerResults > .indResult {
     width: 80vw;
     margin: 0 10vw;
+  }
+
+  .output:hover .beerInfo {
+    visibility: hidden;
   }
 }
